# life

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  tech-requirement.md
.github/workflows/: build.yml
OOP/: CMakeLists.txt  Debug.sh  build_project.sh  main.cpp  map_config.cpp
OOP/configurate/: map_config.hpp
OOP/include/: Adapter.hpp  Controlling.hpp  Game.hpp  Game_renderer.hpp  Helper.hpp  Home_window_controlling.hpp  Logic.hpp  Map_renderer.hpp  Painter.hpp  Painter_settings.hpp  Renderer.hpp  Settings_renderer.hpp  Settings_window_controlling.hpp
docs/: tech-requirement.md
includes/: Game.hpp  input.hpp  logics.hpp
includes/database/: Map.hpp
src/: input.cpp  logics.cpp  main.cpp
test/: test.cpp
tests/: main.cpp  tests.cpp
